update v2 en - translation

--- a/en v2/amis.html
+++ b/en v2/amis.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Amis | Emmanuel HALTER
+			  Friends | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/amis.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -73,37 +73,43 @@
 	</nav>	
 </header>
 <div class="content">
-	<h1>Amis</h1>
-	<h3>Parceque tout le monde a besoin d'un r&eacute;seau</h3>
-	<p>Int&eacute;ress&eacute;s pour &eacute;changer avec des gens passionn&eacute;s ? Choississez votre domaine !</p>
-	<h2>D&eacute;veloppement web &amp; Mobile</h2>
-	<ul>
-		<li>
-			<a href="http://adrian.gaudebert.fr/">Adrian Gaudebert</a> - Passionn&eacute; de d&eacute;veloppement web
-		</li>
-		<li>
-			<a href="http://axel.royerb.com/">Axel Royer</a> - D&eacute;veloppeur d'application mobile
-		</li>
-	</ul>
-	<h2>Illustration Graphique</h2>
-	<ul>
-		<li>
-			<a href="http://www.titipops.fr/">Alita Bernachot</a> - Cr&eacute;atrice, Dessinatrice et d&egrave;veloppeuse web
-		</li>
-	</ul>
-	<h2>Recrutement</h2>
+	<h1>Friends</h1>
+	<h3>Because everybody needs a professional network</h3>
+	<p>Interested to talk with passionnate people ? Choose your area !</p>
+	<h2>Mobile &amp; Web Development</h2>
 	<ul>	
 		<li>
-			<a href="http://www.jordico.com/">Daniel Jordi</a> - Recruteur et coach en recherche de travail
+			<a href="http://adrian.gaudebert.fr/">Adrian Gaudebert</a> - Web Developer
 		</li>
 		<li>
-			<a href="http://careercake.com/">Aimee Bateman</a> - Recruteur, entrepreneur et coach en carri&egrave;re
+			<a href="http://axel.royerb.com/">Axel Royer</a> - Mobile Apps Developer
 		</li>
 	</ul>
-	<h2>Photographie</h2>
-	<ul>	
+	<h2>Design &amp; Web</h2>
+	<ul>
 		<li>
-			<a href="">Pauline Darley</a> - Capturer vos id&eacute;es en photos
+			<a href="http://www.titipops.fr/">Alita Bernachot</a> - Developer / Designer / Draftswoman
+		</li>
+	</ul>
+	<h2>Recruiting</h2>
+	<ul>
+		<li>
+			<a href="http://www.jordico.com/">Daniel Jordi</a> - Recruiter and  jobsearch coach
+		</li>
+		<li>
+			<a href="http://careercake.com/">Aimee Bateman</a> - Recruiter, entrepreneur and careers coach
+		</li>
+	</ul>
+	<h2>Sport</h2>
+	<ul>
+		<li>
+			<a href="http://www.besoin2sport.com/">Matthieu Verneret</a> - Karateka and coach
+		</li>
+	<ul>
+	<h2>Photography</h2>
+	<ul>
+		<li>
+			<a href="">Pauline Darley</a> - Capture your ideas with pictures
 		</li>
 	</ul>
 </div>
