--- a/en v2/apropos.html
+++ b/en v2/apropos.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Mentions L&eacute;gales | Emmanuel HALTER
+			  Imprint | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/apropos.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -73,32 +73,32 @@
 	</nav>	
 </header>
 <div class="content">
-	<h1>Mentions L&eacute;gales</h1>
-	<p>Site con&ccedil;u et r&eacute;alis&eacute; par <strong>Emmmanuel HALTER</strong></p>
-	<p>Les droits du site dans le menu du bas sont partag&eacute;s gr&acirc;ce &agrave; l'id&eacute;e originale de 
+	<h1>Imprint</h1>
+	<p>Website design by <strong>Emmmanuel HALTER</strong></p>
+	<p>Rights' website in the footer are shared thanks to the original idea of  
 		<a href="http://copyheart.org/">Copyheart</a>
 	</p>
-	<p>Parcequ'il n'y a pas que le <strong>JAVA</strong> dans la vie, ce site a &eacute;t&eacute; d&eacute;velopp&eacute; avec : </p>
+	<p>Because <strong>JAVA</strong> is not the only interesting technology in my life, this website is developed with : </p>
 		<img alt="technologies" src="icon/html5_css3_jQuery_slogo.png"/>
 	<p>
-		L'image de la section "Apports" ainsi que mon cartoCV ont été crée grâce aux logiciels de MindMapping 
-		<a href="http://www.mindomo.com/">Mindomo</a> et <a href="http://www.mindjet.com/">Mindjet</a>.
+		Picture in my section "What can i bring" and my cartoCV has been create thanks to the MindMapping software 
+		<a href="http://www.mindomo.com/">Mindomo</a> and <a href="http://www.mindjet.com/">Mindjet</a>.
 	</p>
 	<p>
-		La page "Voyage" intègre en javascript l'excellente 
-		<a href="https://developers.google.com/maps/documentation/javascript/tutorial?hl=fr">API Google Maps</a> ainsi que la nouvelle version de cet outil. 		
+		The page "Voyage" includes in JavaScript the famous 
+		<a href="https://developers.google.com/maps/documentation/javascript/tutorial?hl=fr">API Google Maps</a> and also the new version of this one. 		
 	</p>
-	<p>Le formulaire de contact a &eacute;t&eacute; cr&eacute;e gr&acirc;ce &agrave; 
+	<p>The Contact form has been created with 
 		<a href="http://posabsolute.github.io/jQuery-Validation-Engine/">Form Validator Engine</a>
-		et les graphiques de ma page de profil gr&acirc;ce &agrave; 
+		and graphics on my profile page with
 		<a href="http://www.rgraph.net/">RGraph</a>
 	</p>
 	<p>
-		La retouche des ic&ocirc;nes et images a &eacute;t&eacute; faite via GIMP 2 et icon Craft
+		Editing icons and pictures has been done via GIMP 2 and icon Craft
 	</p>
 	<p>
-		Les couleurs du site sont le reflet de certains principes qui font partie de ma vie :<br>
-		le <strong id="bleu">bleu</strong> pour <strong id="bleu">l'ouverture d'esprit</strong> et <strong id="bleu">l'honn&ecirc;tet&eacute;</strong>, <strong id="orange">l'orange</strong> pour <strong id="orange">l'&eacute;change</strong> et le <strong id="jaune">jaune</strong> pour <strong id="jaune">la joie de vivre !</strong>
+		Colors are the metaphors of some of my life's principles : <br>
+		<strong id="bleu">Blue</strong> means <strong id="bleu">open-minded</strong> and <strong id="bleu">integrity</strong>, <strong id="orange">Orange</strong> stands for <strong id="orange">communication</strong> and <strong id="jaune">Yellow</strong> the last one for <strong id="jaune">Happiness !</strong>
 	</p>
 </div>
 <footer>
