--- a/en v2/compétences.html
+++ b/en v2/compétences.html
@@ -74,7 +74,7 @@
 </header>
 <div class="content">
 		<section>
-			<h1>Niveau</h1>
+			<h1>Level</h1>
 			<canvas id="tSkills" width="700" height="350">[No canvas support]</canvas>
 			<canvas id="fSkills" width="700" height="350">[No canvas support]</canvas>
 		</section>
