--- a/en v2/contact.html
+++ b/en v2/contact.html
@@ -40,31 +40,31 @@
 	<nav>
 		<ul id="menu">
 			<li>
-				<a href="http://ehalter.com">Accueil</a>
+				<a href="http://ehalter.com">Home</a>
 			</li>
 			<li>
-				<a href="#">Profil</a>
+				<a href="#">Profile</a>
 				<ul>
-					<li><a href="http://ehalter.com/cv.html">CV</a></li>
-					<li><a href="http://ehalter.com/compétences.html">Compétences</a></li>
-					<li><a href="http://ehalter.com/apports.html">Apports</a></li>
+					<li><a href="http://ehalter.com/cv.html">Resume</a></li>
+					<li><a href="http://ehalter.com/compétences.html">Skills</a></li>
+					<li><a href="http://ehalter.com/apports.html">what can i bring</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Intérêts</a>
+				<a href="#">Interests</a>
 				<ul>
-					<li><a href="http://ehalter.com/histoire.html">Histoire</a></li>
-					<li><a href="http://ehalter.com/voyage.html">Voyage</a></li>
+					<li><a href="http://ehalter.com/histoire.html">History</a></li>
+					<li><a href="http://ehalter.com/voyage.html">Travel</a></li>
 					<li><a href="http://ehalter.com/sport.html">Sport</a></li>
-					<li><a href="http://ehalter.com/recrutement.html">Recrutement</a></li>
+					<li><a href="http://ehalter.com/recrutement.html">Recruitment</a></li>
 				</ul>
 			</li>
 			<li>
-				<a href="#">Projets</a>
+				<a href="#">Projects</a>
 				<ul>
 					<li><a href="http://ehalter.com/missions.html">Missions</a></li>
 					<li><a href="http://ehalter.com/happiwork.html">HappiWork Plan</a></li>
-					<li><a href="http://ehalter.com/futurs.html">Futurs</a></li>
+					<li><a href="http://ehalter.com/futurs.html">Future</a></li>
 				</ul>
 			</li>
 			<li>
@@ -74,22 +74,22 @@
 	</nav>			
 </header>
 <section id="contact">
-	<h1>Contactez-moi</h1>
-	<p>Et je reviendrai vers vous rapidement</p>
+	<h1>Contact me</h1>
+	<p>and i will come back to you as soon as possible</p>
 	<form action="contact.php" method="post">
 						<p>
 							<label class="field_label">
-								Identit&eacute;
+								Identity
 								<span class="field_required">*</span>
 							</label>
 							<div id="identity">
 								<span id="input_container_left" class="input_left">
 									<input id="lastname" class="validate[required] alertText" type="text" tabindex="1" value="" name="lastname" maxlength="50"/><br>
-									<label for="lastname">Nom</label>
+									<label for="lastname">Lastname</label>
 								</span>
 								<span id="input_container_right" class="input_right">
 									<input id="firstname" class="validate[required] alertText" type="text" tabindex="1" value="" name="firstname" maxlength="50"/><br>
-									<label for="firstname">Pr&eacute;nom</label>
+									<label for="firstname">Firstname</label>
 								</span>
 							</div>
 						</p>
@@ -104,7 +104,7 @@
 						</p>
 						<p>
 							<label class="field_label">
-								T&eacute;l&eacute;phone (optionnel)
+								Phone Number(optional)
 							</label>
 							<div class="input_container">
 								<input id="telephone" class="validate[custom[phone]] alertText" type="text" name="telephone" maxlength="15"/>
@@ -112,7 +112,7 @@
 						</p>
 						<p>
 							<label class="field_label">
-								Sujet
+								Subject
 								<span class="field_required">*</span>
 							</label>
 							<div class="input_container">
@@ -130,30 +130,30 @@
 						</p>
 						<p class="check">
 							<label>
-								Machine
+								Machina
 							</label>
 							<input type="radio" id="radio1" checked="checked" value="oui" name="mail_check"/>
 							<label>
-								Humain bien &eacute;videmment !
+								Oh my god...Human !
 							</label>
 							<input type="radio" id="radio2"  value="non" name="mail_check"/> 
 						</p>
 						<p>
 							<button id="m_submit" class="form_button" name="m_submit" type="submit" role="button">
 								<span class="button-text">
-								Envoyer
+								Submit
 								</span>
 							</button>
 							|
 							<a href="http://ehalter.com/">
-								Annuler
+								Cancel
 							</a>
 						</p>
 	</form>
 </section>
 <footer>
 		<section id="footerbox-network">
-			<h1>Restons connect&eacute;s</h1>
+			<h1>Stay connected</h1>
 				<a target="_blank" title="LinkedIn" href="http://www.linkedin.com/pub/emmanuel-halter/34/a43/511">
 					<span id="connect-linkedin" class="sbconnecticon"></span>
 				</a>
@@ -165,16 +165,16 @@
 				</a>
 		</section>	
 		<section id="footerbox-about">
-			<h1>A propos</h1>
+			<h1>About</h1>
 			<p>
-				<a href="http://ehalter.com/apropos.html">Mentions l&eacute;gales</a>
+				<a href="http://ehalter.com/apropos.html">Imprint</a>
 				||
-				<a href="http://ehalter.com/amis.html">Amis</a>
+				<a href="http://ehalter.com/amis.html">Friends</a>
 				||
 				<a href="http://ehalter.com/blog/">Blog</a>
 			</p>
 			<p>
-				&#9825; 2013 Par Emmanuel Halter. Copiez et partagez S'il vous plait.
+				&#9825; 2013 By Emmanuel Halter. Please copy and share.
 			</p>
 		</section>
 </footer>
