--- a/en v2/cv.html
+++ b/en v2/cv.html
@@ -73,22 +73,22 @@
 	</nav>	
 </header>
 <div class="content">
-		<h1>Choisissez votre support</h1>
+		<h1>Choose your support</h1>
 		<section id="cv">
 			<ol>
 				<li>
-					<h2>CV traditionnel</h2>
+					<h2>Traditional Resume</h2>
 					<article>
 						<a href="http://ehalter.com/cv.pdf" title="CV traditionnel" onclick="window.open(this.href);return false">
-							<img id="cv_fr" alt="cv" src="images/cv_fr.png"/>
+							<img id="cv_fr" alt="resume" src="images/cv_fr.png"/>
 						</a>
 					</article>
 				</li>
 				<li>
-					<h2>CartoCV</h2>
+					<h2>CartoResume</h2>
 					<article>
 						<a href="http://www.mindomo.com/view.htm?m=99bebe0863882b7b86207f2face5a197" title="CartoCV" onclick="window.open(this.href);return false">
-							<img id="cartoCV" alt="cartoCV" src="images/cartoCV.png"/>
+							<img id="cartoCV" alt="cartoResume" src="images/cartoCV.png"/>
 						</a>
 					</article>
 				</li>
