--- a/en v2/futurs.html
+++ b/en v2/futurs.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Projets futurs | Emmanuel HALTER
+			  Future | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/futurs.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -73,14 +73,18 @@
 	</nav>	
 </header>
 <div class="content">
-	<h1>Projets futurs</h1>
+	<h1>Future Projects</h1>
 	<article>
-		<p>Bien que junior sur le marché du travail, j'ai déjà une bonne idée dans la voie sur laquelle je veux m'orienter à moyen terme (&asymp; 4 ans).</p>
-		<p>Evidemment je ne peux savoir ce que me réserve l'avenir (peut-être serais-je historien dans 5 ans!) mais voici les deux axes que j'aimerai développer.</p>
+		<p>
+			Although junior on the labor market, i already have a good idea in which way i want to guide my career in the middle run (&asymp; 4 years).
+		</p>
+		<p>
+			Obviously, i can not predict my futur (maybe i will be Historian in 5 years!) but here are the two paths i would like to develop :
+		</p>
 	</article>
 	<section>
-		<img alt="Business Analyste" src="images/banalyst.png"/>
-		<img alt="A l'étranger" src="images/abroad.png"/>
+		<img alt="Business Analyst" src="images/banalyst.png"/>
+		<img alt="Abroad" src="images/abroad.png"/>
 	</section>
 </div>
 <footer>
