--- a/en v2/happiwork.html
+++ b/en v2/happiwork.html
@@ -75,19 +75,19 @@
 <div class="content">
 	<section id="beginning">
 		<p>
-			Bas&eacute;e sur une id&eacute;e originale de Gretchen Rubin et son livre <strong>"The Happiness Project"</strong>, j'ai d&eacute;cid&eacute; de cr&eacute;er mon propre projet.	
+			Based on the original idea of Gretchen Rubin and her best-seller <strong>"The Happiness Project"</strong>, I decided to create my own.	
 		</p>
 		<p>
-			Pendant <strong>1 an</strong> &agrave; partir d'ao&ucirc;t 2013, j'essayerai, &eacute;tape par &eacute;tape, non pas de changer ma vie mais <strong>d'&ecirc;tre plus heureux au travail</strong>.	
+			For <strong>1 year</strong> from August 2013, I will try, step by step, not to change my life but <strong> to be happier at work</strong>.	
 		</p>
 		<p>
-			A travers mes lectures, mes rencontres et mon analyse de ma vie au travail, je proposerai, <strong>chaque mois, mes id&eacute;es</strong> pour &ecirc;tre plus &eacute;panoui.
+			Through my reading, my meeting and my life work's analysis, i will suggest, <strong>each month my ideas</strong> to be more beaming.
 		</p>
 		<li>
 			<h2>Introduction</h2>
 			<article>
 				<p>
-					Commencez l'aventure <a href="http://ehalter.com/HPlan/fr/">ici</a>
+					Start this journey <a href="http://ehalter.com/HPlan/fr/">here</a>
 				</p>
 			</article>
 		</li>
@@ -96,62 +96,62 @@
 	<section id="calendar">
 		<ol>
 			<li>
-				<h2>Août</h2>
+				<h2>August</h2>
 				<article>
 				</article>	
 			</li>
 			<li>
-					<h2>Septembre</h2>
+					<h2>September</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Octobre</h2>
+					<h2>October</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Novembre</h2>
+					<h2>November</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Décembre</h2>
+					<h2>December</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Janvier</h2>
+					<h2>January</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Février</h2>
+					<h2>February</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Mars</h2>
+					<h2>March</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Avril</h2>
+					<h2>April</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Mai</h2>
+					<h2>May</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Juin</h2>
+					<h2>June</h2>
 					<article>
 					</article>
 			</li>
 			<li>
-					<h2>Juillet</h2>
+					<h2>July</h2>
 					<article>
 					</article>
 			</li>
@@ -160,7 +160,7 @@
 	<img alt="fleche" src="images/fleches.png"/>
 	<section id="aftermatch">
 		<li>
-			<h2>Bilan</h2>
+			<h2>Aftermath</h2>
 			<article>
 				<p>
 					<!--Vous pouvez retrouver mon analyse <a href="http://ehalter.com/HPlan/fr/">là</a>-->
