--- a/en v2/histoire.html
+++ b/en v2/histoire.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Histoire | Emmanuel HALTER
+			  History | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/histoire.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -74,17 +74,17 @@
 </header>
 <div class="content">
 	<article>
-	<h1>Opération Storylight</h1>
-	<p>L'ennemi a envoyé des espions dans le passé pour changer le cours du conflit et plus encore. Vous devez <strong>absolument les neutraliser</strong>.<p>
-	<p>Par conséquent, demain vous sauterez sur <strong>l'Histoire</strong>. Vous serez en terres inconnues entourés d'anciens peuples et espèces. Soyez prudent.
-	Heureusement, les Hommes sous vos ordres sont des experts. Ils sont biens entrainés, curieux et n'ont qu'un rêve : la connaissance. </p>
-	<p>Vous retrouverez les détails de l'opération en <strong>consultant le dossier sur votre table de briefing.</strong></p>
-	<p>Bonne chance Commandant !</p>
+	<h1>Operation LightStory</h1>
+	<p>The enemy sent spies into the past to change the conflict' future and maybe more... You must <strong>stop them</strong>.<p>
+	<p>Therefore, tomorrow you will jump on <strong>History</strong>. You will be in unknown lands surrounded by ancient civilization. Be careful.
+	fortunately, Men under your command are experts. They are well-trained, curious and have one dream : knowledge. </p>
+	<p>You will find all the details about this operation by <strong>looking the file on your briefing table</strong>.</p>
+	<p>Good luck Commander !</p>
 	</article>
 	<map name="mbriefing">
 		<img id="history" src="images/ww2/history.png"/>
 		<a href="#">
-			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png"/>
+			<img id="sfiles" alt="sfiles" src="images/ww2/sfiles.png" /> <!--onmouseover="this.src='images/ww2/sfiles_test.png'" onmouseout="this.src='images/ww2/sfiles.png'"-->
 		</a>
 		<a target="_blank" href="http://www.39-45.org/portailv2/news/news.php">
 			<img id="boussole" alt="boussole" src="images/ww2/boussole.png"/>
@@ -122,14 +122,14 @@
 <script src="js/myJScript.js"></script>	
 <script type="text/javascript" src="js/reveal.js"></script>
 <div id="myModal" class="reveal-modal">
-		 <h1>Ordre du jour</h1>
+		 <h1>Mission Order</h1>
 		 <p>
-			Passionn&eacute; d'Histoire depuis mon plus jeune &acirc;ge, j'aime d&eacute;couvrir <strong>l'&eacute;volution</strong> <br> de l'Homme et de la plan&egrave;te &agrave; travers les si&egrave;cles. 
-			C'est pour moi l'opportunit&eacute; de <strong>connaitre</strong> notre pass&eacute;.
+			Passionnate about History since i am young, i love to discover <strong>Evolution</strong> of mankind and our planet through the ages.
+			For me, it is a good opportunity <strong>to know</strong> our past.
 		</p>
 		<p>
-			Depuis <strong>10 ans</strong> je suis <strong>sp&eacute;cialis&eacute;</strong> dans la <strong>2nd Guerre mondiale</strong>, dernier grand conflit de l'&egrave;re humaine. 
-			C'est un l&eacute;ger <strong>tribut</strong> &agrave; ces personnes dont le sacrifice a conduit &agrave; la <strong>libert&eacute;</strong>.
+			For ten years, i am specialized in WWII the last world conflict of human history.
+			It is also a slight <strong>tribute</strong> to these people who sacrifice led to <strong>Liberty</strong>.
 		</p>
 		<a class="close-reveal-modal">&#215;</a>
 </div>
