--- a/en v2/index.html
+++ b/en v2/index.html
@@ -7,7 +7,7 @@
 <head>
 		<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Accueil | Emmanuel HALTER
+			  Home | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/accueil.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
@@ -76,24 +76,24 @@
 		<img id="portrait" alt="image profil" src="images/profil.png"/>
 		<article>
 			<h1>
-				Bienvenue ! Je m'appelle <strong>Emmanuel</strong> et je suis <strong>Ing&eacute;nieur Java/J2E </strong>
+				Welcome ! My name's <strong>Emmanuel</strong> and i am an <strong>JAVA/JEE engineer</strong>
 			</h1>
 			<p>
-				Initialement form&eacute; &agrave; la technique, je m'attelle &agrave; comprendre les liens entre celle-ci et l'aspect fonctionnel des projets. 
-				En dehors du d&eacute;veloppement JAVA &amp; Web, communiquer, analyser et mod&eacute;liser sont donc mes secteurs de pr&eacute;dilections.
+				Originally trained with technical side, i am currently looking to understand links between this one and fonctional skills through projects. 
+				Apart JAVA & Web development, exchanging with people, analyzing and designing are my best weapons to work.
 			</p>
-			<p>Je suis &agrave; l'heure actuelle &agrave; la recherche d'une entreprise.</p>
-			<p>Dans cet espace vous pourrez consulter 
-				<a href="http://ehalter.com/profile"> mon profil</a>, en apprendre plus 
-				<a href="http://ehalter.com/interet"> sur mes principaux int&eacute;r&ecirc;ts </a>, savoir quelles sont
-				<a href="http://ehalter.com/projet">mes projets actuels</a>,
-				ou
-				<a href="http://ehalter.com/blog/"> consulter mon blog</a>.
-				Si vous voulez encore plus d'informations, &eacute;changer avec moi ou me rencontrer n'h&eacute;sitez pas &agrave; 
-				<a href="http://ehalter.com/contact"> me contacter</a>.
+			<p>I am actively looking for a company to work for.</p>
+			<p>Here you can watch
+				<a href="http://ehalter.com/en/profile.html"> my profile</a>, learn more 
+				<a href="http://ehalter.com/en/interest.html"> about my main interests</a>, to know which are
+				<a href="http://ehalter.com/en/project.html">my current projects</a>,
+				or
+				<a href="http://ehalter.com/blog/"> read my blog (only in french)</a>.
+				If you wish more information, to talk about any subjects, if my help can be useful or to meet me please 
+				<a href="http://ehalter.com/en/contact.html"> contact me</a>.
 			</p>
 			<p>
-				Bonne visite !
+				Have a good travel !
 			</p>
 		</article>
 </div>
