--- a/en v2/missions.html
+++ b/en v2/missions.html
@@ -74,11 +74,11 @@
 </header>
 <div class="content">
 	<section id="pro">
-		<h1>Mission actuelle</h1>
+		<h1>Current Mission</h1>
 		<article>
 			<h2>Participation à ....</h2>
 			<p>x mois pour y </p>
-			<p>Activités principales : </p>
+			<p>Main tasks : </p>
 			<ul>
 				<li>tâche 1</li>
 				<li>tâche 1</li>
@@ -88,20 +88,20 @@
 		</article>
 	</section>
 	<section id="personal">
-		<h1>Mission annexe</h1>
+		<h1>Secondary Mission</h1>
 		<article>
-			<h2>SI & Projet : Quelles priorit&eacute;s ?</h2>
+			<h2>Information System & Project : Which priorities ?</h2>
 				<p>
-					Avec mon exp&eacute;rience au sein du milieu bancaire et de la migration d'un SI, 
-					j'ai compris que <strong>la complexit&eacute; d'un SI</strong> et d'un projet avait une <strong>influence</strong> sur l'aspect <strong>technique</strong> et <strong>fonctionnel</strong>.
+					With my experience in banking and Information System migration, 
+					I understood that <strong>Information System's complexity</strong> and a project had an <strong>impact</strong> on both <strong>technical</strong> and <strong>functional</strong> side.
 				</p>
 				<p>
-					Je voulais donc <strong>comprendre</strong> dans quelle mesure et <strong>comment</strong> cette influence &eacute;tait possible.
-					A travers ma jeune exp&eacute;rience et mon analyse, j'ai voulu <strong>r&eacute;pondre &agrave; ces questions</strong>.
+					I want <strong>to understand</strong> in which measure and <strong>how</strong> this impact is workable.
+					Through my young experience and my analysis, i decided <strong>to answer to these questions</strong>.
 				</p>
 				<p>
-					Ma r&eacute;flexion <strong>&eacute;voluera</strong> avec mon exp&eacute;rience<br>
-					Vous pouvez retrouver mes premi&egrave;res r&eacute;ponses <a href="http://ehalter.com/blog/data/documents/R_METIERS_SI.pdf">ici</a>.
+					My thought <strong>will evolve</strong> with my professional experience<br>
+					You can find my first answers <a href="http://todo">here</a>.
 				</p>
 		</article>
 	</section>
