--- a/en v2/recrutement.html
+++ b/en v2/recrutement.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Ressources Humaines | Emmanuel HALTER
+			 Human Ressources | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/recrutement.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
