--- a/en v2/voyage.html
+++ b/en v2/voyage.html
@@ -8,7 +8,7 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<title>
-			  Voyages | Emmanuel HALTER
+			  Travel | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/voyage.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -76,13 +76,16 @@
 <div class="content" >
 	<article>
 		<p>
-			Ma passion pour l'Histoire m'a amen&eacute; &agrave; voyager. En tant que <strong>citoyen du monde</strong> le visiter est quelque chose d'important &agrave; mes yeux.
+			Hello traveller
 		</p>
 		<p>
-			<strong>D&eacute;couvrir</strong> de nouvelles cultures, avoir une autre <strong>vision du monde</strong> et <strong>&eacute;changer</strong> avec les personnes sont un pas de plus vers <strong>l'ouverture d'esprit</strong>.
+			Boarding is imminent, please go to gate A.
 		</p>
 		<p>
-			Selon mes moyens je planifie de voyager et découvrir une nouvelle destination <strong>tous les 3 mois</strong>. Qu'elle soit proche ou lointaine, <strong>l'aventure est au bas de notre porte !</strong>
+			Do not hesitate <strong>to take a look on the worldmap</strong> below to discover our different destinations. 
+		</p>
+		<p>
+			<a id="ehaltAir" href="#">eHaltAir</a> company wishes you a pleasant journey !
 		</p>
 	</article>
 	<section id="map">
@@ -117,6 +120,26 @@
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/voyages.js"></script>	
+<script src="js/voyages.js"></script>
+<script type="text/javascript" src="js/reveal.js"></script>	
+<div id="myModal" class="reveal-modal">
+	<h1>eHaltAir</h1>
+	<p>
+		French company founded in 1996, eHaltAir is a flag carrier who gather passion for History and travel. The current CEO is Emmanuel HALTER.
+	</p>
+	<p>	
+		Specialized in short-haul flights at the beginning, She places <strong>the world discovery </strong> as one of its main goal. Since 2011, the company has developed its international market including New York by example.
+	</p>
+	<p>
+		Reasons being of this society are simple : <strong>discover</strong> new cultures, have a different<strong>worldview</strong> and exchange with people to be <strong>open-minded</strong>.	
+	</p>
+	<p>
+		To answer to customer's needs, eHaltAir offers a new destination <strong>every three months</strong>. Its most famous <strong>travel formula</strong> is between <strong>3 and 4</strong> days.
+	</p>
+	<p>	
+		Its motto sum up mindset of the company : <strong>"Whether near or far, the adventure begins at the foot of our bed"</strong>
+	</p>
+	<a class="close-reveal-modal">&#215;</a>
+</div>
 </body>
 </html>
