--- a/fr v2/amis.html
+++ b/fr v2/amis.html
@@ -91,6 +91,12 @@
 			<a href="http://www.titipops.fr/">Alita Bernachot</a> - Cr&eacute;atrice, Dessinatrice et d&egrave;veloppeuse web
 		</li>
 	</ul>
+	<h2>Sport</h2>
+	<ul>
+		<li>
+			<a href="http://www.besoin2sport.com/">Matthieu Verneret</a> - Karatéka et coach sportif
+		</li>
+	<ul>
 	<h2>Recrutement</h2>
 	<ul>	
 		<li>
