--- a/fr v2/futurs.html
+++ b/fr v2/futurs.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Projets futurs | Emmanuel HALTER
+			  Futurs | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/futurs.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png" />
