--- a/fr v2/index.html
+++ b/fr v2/index.html
@@ -89,7 +89,7 @@
 				<a href="http://ehalter.com/projet">mes projets actuels</a>,
 				ou
 				<a href="http://ehalter.com/blog/"> consulter mon blog</a>.
-				Si vous voulez encore plus d'informations, &eacute;changer avec moi ou me rencontrer n'h&eacute;sitez pas &agrave; 
+				Si vous voulez encore plus d'informations, &eacute;changer avec moi, me rencontrer ou que mon aide peut vous être utile n'h&eacute;sitez pas &agrave; 
 				<a href="http://ehalter.com/contact"> me contacter</a>.
 			</p>
 			<p>
