--- a/fr v2/sport.html
+++ b/fr v2/sport.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Sports | Emmanuel HALTER
+			  Sport | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/sport.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -87,6 +87,7 @@
 		<source src="test/test.webm" type='video/webm' >
 		<source src="test/test.mp4" type='video/mp4'>
 	</video> 
+	<img alt="olympisme" src="images/test.png">
 </div>
 <footer>
 		<section id="footerbox-network">
