--- a/fr v2/voyage.html
+++ b/fr v2/voyage.html
@@ -8,7 +8,7 @@
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 	<meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
 		<title>
-			  Voyages | Emmanuel HALTER
+			  Voyage | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/voyage.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -76,13 +76,16 @@
 <div class="content" >
 	<article>
 		<p>
-			Ma passion pour l'Histoire m'a amen&eacute; &agrave; voyager. En tant que <strong>citoyen du monde</strong> le visiter est quelque chose d'important &agrave; mes yeux.
+			Bonjour voyageur
 		</p>
 		<p>
-			<strong>D&eacute;couvrir</strong> de nouvelles cultures, avoir une autre <strong>vision du monde</strong> et <strong>&eacute;changer</strong> avec les personnes sont un pas de plus vers <strong>l'ouverture d'esprit</strong>.
+			L'embarquement est imminent, veuillez vous présenter à la porte A.
 		</p>
 		<p>
-			Selon mes moyens je planifie de voyager et découvrir une nouvelle destination <strong>tous les 3 mois</strong>. Qu'elle soit proche ou lointaine, <strong>l'aventure est au bas de notre porte !</strong>
+			N'hésitez pas à <strong>consulter la mapmonde</strong> ci-dessous pour découvrir nos différentes étapes. 
+		</p>
+		<p>
+			La compagnie <a id="ehaltAir" href="#">eHaltAir</a> vous souhaite un agréable voyage !
 		</p>
 	</article>
 	<section id="map">
@@ -117,6 +120,26 @@
 </footer>
 <script type="text/javascript" src="js/jquery-1.9.1.js"></script>
 <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
-<script src="js/voyages.js"></script>	
+<script src="js/voyages.js"></script>
+<script type="text/javascript" src="js/reveal.js"></script>	
+<div id="myModal" class="reveal-modal">
+	<h1>eHaltAir</h1>
+	<p>
+		Compagnie française fondée en 1996, eHaltAir couple sa passion de l'Histoire aux voyages. Elle est actuellement dirigée par Emmanuel Halter.
+	</p>
+	<p>	
+		Spécialisée dans le vol court courrier à ses débuts, elle place <strong>la découverte du monde</strong> comme l'un de ses principaux objectifs. Depuis 2011, elle développe son marché à l'international avec notamment une de ses destinations phares : New York.
+	</p>
+	<p>
+		Les raisons d'être de la société sont simples : <strong>découvrir</strong> de nouvelles cultures, avoir une autre <strong>vision du monde</strong> et échanger avec les personnes pour <strong>l'ouverture d'esprit</strong>.	
+	</p>
+	<p>
+		Pour répondre au besoin régulier de son client, elle propose une nouvelle destination <strong>tous les 3 mois</strong>. Sa <strong>formule voyage</strong> de prédilection est de <strong>3 à 4</strong> jours.
+	</p>
+	<p>	
+		Son slogan résume bien l'état d'esprit de la compagnie : <strong>"Qu'elle soit proche ou lointaine, l'aventure commence au pied de notre lit"</strong>
+	</p>
+	<a class="close-reveal-modal">&#215;</a>
+</div>
 </body>
 </html>
