--- a/en v2/sport.html
+++ b/en v2/sport.html
@@ -7,7 +7,7 @@
 <head>
 	<meta content="text/html; charset=UTF-8" http-equiv="Content-Type"/>
 		<title>
-			  Sports | Emmanuel HALTER
+			  Sport | Emmanuel HALTER
 		</title>
 		<link rel="stylesheet" type="text/css" href="css/sport.css">
 		<link rel="icon" type="image/png" href="icon/favicon.png"/>
@@ -73,13 +73,13 @@
 	</nav>		
 </header>
 <div class="content">
-	<h1>Sports</h1>
+	<h1>Sport</h1>
 	<article>
 		<p>
-			<strong>Le contr&ocirc;le de soi</strong>, le d&eacute;passement, <strong>le respect de l'autre</strong>, la d&eacute;termination et <strong>l'&eacute;quilibre physique</strong> sont des valeurs qui font que le sport prend une place particuli&egrave;re dans ma vie. 
+			<strong>Self-control</strong>, overtaking, <strong>respect</strong>, courage and <strong>physical balance</strong> are values that make sport is a cornerstone in my life. 
 		</p>
 		<p>
-			Bien plus qu'une simple pratique, faire du sport est &agrave; mon sens un <strong>mode de vie</strong>. 
+			More than just a hobby, sport is, for me, a <strong>way of life</strong>.
 		</p>
 	</article>
 	<video id="videoSport" controls>
@@ -87,6 +87,7 @@
 		<source src="test/test.webm" type='video/webm' >
 		<source src="test/test.mp4" type='video/mp4'>
 	</video> 
+	<img alt="olympisme" src="images/test.png">
 </div>
 <footer>
 		<section id="footerbox-network">
